--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,9 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "./node_modules/tw-elements/dist/js/index.min.js"
+            ]
           },
           "configurations": {
             "production": {
