--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,8 @@
               "src/styles.css"
             ],
             "scripts": [
-              "./node_modules/tw-elements/dist/js/index.min.js"
+              "./node_modules/tw-elements/dist/js/index.min.js",
+              "./node_modules/flowbite/dist/flowbite.js"
             ]
           },
           "configurations": {
