--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "~12.2.0",
     "@tailwindcss/line-clamp": "^0.4.0",
     "flowbite": "^1.4.7",
+    "ng-starrating": "^1.0.20",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "tw-elements": "^1.0.0-alpha12",
